# RenderingWorkShop

Day1/: README.md
Day1/src/: Camera.cpp  Color.cpp  Color.h  Film.h  Image.cpp  Image.h  Renderer.cpp  Renderer.h  main.cpp
Day2/: CMakeLists.txt
Day2/src/: Camera.cpp  Camera.h  Image.cpp  Renderer.cpp  main.cpp
